--- a/Diplom.Mobile/Diplom.Mobile/Views/News.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/News.xaml
@@ -4,7 +4,7 @@
              x:Class="Diplom.Mobile.Views.News">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Welcome to Xamarin.Forms! Это новости"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
