--- a/Diplom.Mobile/Diplom.Mobile/Views/Reviews.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/Reviews.xaml
@@ -2,11 +2,33 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Diplom.Mobile.Views.Reviews">
-    <ContentPage.Content>
+    <!--<ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
-    </ContentPage.Content>
+    </ContentPage.Content>-->
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="2*" />
+        </Grid.RowDefinitions>
+        <!--<BoxView Color="Red" Grid.Column="0" Grid.Row="0" />
+        <BoxView Color="Black" Grid.Column="0" Grid.Row="1" />-->
+<!--Orientation="Horizontal"-->
+        <StackLayout x:Name="menu"  Spacing="8"  Grid.Column="0" Grid.Row="0" >
+            <Label Font="26" Text="Введите свой отзыв" />
+            <Editor BackgroundColor="#a5d6a7" HeightRequest="100"     />
+            <!--HeightRequest="200"-->
+            <Button Text="Отправить" Clicked="Button_Clicked" Margin="150,5,5,5" />
+
+        </StackLayout>
+        <StackLayout x:Name="data" Grid.Column="0" Grid.Row="1" Margin="20" >
+            <Button Text="Отправить" Clicked="Button_Clicked_1" Margin="150,5,5,5" />
+        </StackLayout>
+    </Grid>
 </ContentPage>
