--- a/Diplom.Mobile/Diplom.Mobile/Views/Account.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/Account.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Diplom.Mobile.Views.Account">
+             x:Class="Diplom.Mobile.Views.Account"
+             Title="Аккаунт">
     <!--<ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
@@ -14,8 +15,8 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
         <!--<BoxView Color="Red" Grid.Column="0" Grid.Row="0" />
         <BoxView Color="Black" Grid.Column="0" Grid.Row="1" />-->
@@ -34,7 +35,7 @@
 
         </StackLayout>
 
-        <ScrollView Grid.Column="0" Grid.Row="1" Margin="0,20,0,0">
+        <ScrollView Grid.Column="0" Grid.Row="1" Margin="0,10,0,0">
         <StackLayout x:Name="data" Grid.Column="0" Grid.Row="1" Margin="20" >
             
                 <Label Text="Ваше имя" Margin="0, 5, 0, 0"/>
