--- a/Diplom.Mobile/Diplom.Mobile/Views/Reviews.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/Reviews.xaml
@@ -14,7 +14,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <!--<BoxView Color="Red" Grid.Column="0" Grid.Row="0" />
@@ -26,8 +26,11 @@
             <Editor x:Name="reviewEntry" BackgroundColor="#a5d6a7" HeightRequest="50"/>
             <!--HeightRequest="200"-->
             <Label Text="Поставте оценку заведению от 1 до 5" HorizontalOptions="Center"/>
-            <!--<Slider x:Name="slider" Minimum="0" Maximum="10" Value="5" ValueChanged="Slider_ValueChanged"/>
-            <Label x:Name="sliderZnach" Text="" FontSize="Large" HorizontalOptions="Center"/>-->
+            
+            <Slider x:Name="slider" Minimum="0" Maximum="10" Value="5" ValueChanged="Slider_ValueChanged"/>
+            <Label x:Name="sliderZnach" Text="" FontSize="Large" HorizontalOptions="Center"/>
+            <Label x:Name="sliderZnachh" Text="" FontSize="Large" HorizontalOptions="Center"/>
+            
             <Picker x:Name="picker" Margin="100,0,100,0" >
                 <Picker.Items>
                     <x:String>1</x:String>
