--- a/Diplom.Mobile/Diplom.Mobile/Views/DetailMenu/MasterDetailPage1.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/DetailMenu/MasterDetailPage1.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Diplom.Mobile.Views.User.MasterDetailPage1"
+             x:Class="Diplom.Mobile.Views.DetailMenu.MasterDetailPage1"
              xmlns:views="clr-namespace:Diplom.Mobile.Views;assembly=Diplom.Mobile"
-             xmlns:user="clr-namespace:Diplom.Mobile.Views.User;assembly=Diplom.Mobile"
+             xmlns:user="clr-namespace:Diplom.Mobile.Views.DetailMenu;assembly=Diplom.Mobile"
              NavigationPage.HasNavigationBar="False">
   <MasterDetailPage.Master>
     <user:MasterDetailPage1Master x:Name="MasterPage" />
@@ -12,7 +12,7 @@
   <MasterDetailPage.Detail>
     <NavigationPage>
       <x:Arguments>
-        <views:News />
+        <views:NewsPage />
       </x:Arguments>
     </NavigationPage>
   </MasterDetailPage.Detail>
