--- a/Diplom.Mobile/Diplom.Mobile/Views/EditAccountPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/EditAccountPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Diplom.Mobile.Views.AccountEdit">
+             x:Class="Diplom.Mobile.Views.EditAccountPage">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -11,15 +11,12 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <StackLayout x:Name="menu"  Grid.Column="0" Grid.Row="0"  Margin="10">
-            <!--<Button Text="Вход" />
-            <Button Text="Регистрация" />-->
+        <StackLayout Grid.Column="0" Grid.Row="0"  Margin="10">
             <Label Text="На данной странице вы можете изменить ваши данные в системе" Margin="10"/>
-
         </StackLayout>
 
         <ScrollView Grid.Column="0" Grid.Row="1" Margin="0,10,0,0">
-            <StackLayout x:Name="data" Grid.Column="0" Grid.Row="1" Margin="20" >
+            <StackLayout Grid.Column="0" Grid.Row="1" Margin="20" >
 
                 <Label Text="Ваше логин" Margin="0, 5, 0, 0"/>
                 <Entry x:Name="loginEntry" Placeholder = "Login"  />
@@ -48,7 +45,7 @@
                 <Entry x:Name="passworAgaindEntry"  Placeholder = "Confirm password" IsPassword ="True" />
 
                 <Label x:Name="textLabel" Text="qwert"  />
-                <!--FontSize="Large"-->
+
                 <Button Text="Изменить данные" Clicked="Button_Clicked"/>
             </StackLayout>
         </ScrollView>
