--- a/Diplom.Mobile/Diplom.Mobile/Views/LoginPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/LoginPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Diplom.Mobile.Views.Login"
+             x:Class="Diplom.Mobile.Views.LoginPage"
              Title="Авторизация">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,7 +14,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
-        
+
         <StackLayout Grid.Column="0" Grid.Row="1" Margin="20" >
             <Entry x:Name="loginEntry" Placeholder="Login" />
             <Entry x:Name="passwordEntry"  Placeholder="Password" IsPassword ="True" />
