--- a/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
@@ -1,14 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Diplom.Mobile.Views.Reviews">
-    <!--<ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>-->
+             x:Class="Diplom.Mobile.Views.ReviewsPage">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -17,20 +10,14 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <!--<BoxView Color="Red" Grid.Column="0" Grid.Row="0" />
-        <BoxView Color="Black" Grid.Column="0" Grid.Row="1" />-->
-<!--Orientation="Horizontal"-->
         <StackLayout  Spacing="8"  Grid.Column="0" Grid.Row="0" >
-            
+
             <Label Font="24" Text="Введите свой отзыв" />
             <Editor x:Name="reviewEntry" BackgroundColor="#a5d6a7" HeightRequest="50"/>
-            <!--HeightRequest="200"-->
-            <Label Text="Поставте оценку заведению от 1 до 5" HorizontalOptions="Center"/>
-            
-            <!--<Slider x:Name="slider" Minimum="0" Maximum="10" Value="5" ValueChanged="Slider_ValueChanged"/>
-            <Label x:Name="sliderZnach" Text="" FontSize="Large" HorizontalOptions="Center"/>
-            <Label x:Name="sliderZnachh" Text="" FontSize="Large" HorizontalOptions="Center"/>-->
-            
+
+            <Label Text="Поставьте оценку заведению от 1 до 5" HorizontalOptions="Center"/>
+
+
             <Picker x:Name="picker" Margin="100,0,100,0" >
                 <Picker.Items>
                     <x:String>1</x:String>
@@ -42,17 +29,13 @@
             </Picker>
             <Button Text="Отправить" Clicked="Button_Clicked" Margin="150,0,5,5" />
         </StackLayout>
-        
-        <StackLayout x:Name="data" Grid.Column="0" Grid.Row="1" Margin="20" >
-            <!--<Button Text="Отправить" Clicked="Button_Clicked_1" Margin="150,5,5,5" />-->
 
+        <StackLayout x:Name="data" Grid.Column="0" Grid.Row="1" Margin="20" >
             <StackLayout>
-                <!--<Label Text="{Binding Source={x:Reference Name=phonesList}, Path=SelectedItem.Title}"
-            FontSize="Large" />-->
                 <ListView x:Name="reviewList"
-              HasUnevenRows="True"
-              ItemsSource="{Binding Reviewss}"
-              ItemTapped="OnItemTapped">
+                          HasUnevenRows="True"
+                          ItemsSource="{Binding Reviewss}"
+                          ItemTapped="OnItemTapped">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -69,7 +52,6 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
-
         </StackLayout>
     </Grid>
 </ContentPage>
