--- a/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
@@ -10,14 +10,12 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout  Spacing="8"  Grid.Column="0" Grid.Row="0" >
-
+        <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0" >
             <Label Font="24" Text="Введите свой отзыв" />
             <Editor x:Name="reviewEntry" BackgroundColor="#a5d6a7" HeightRequest="50"/>
 
             <Label Text="Поставьте оценку заведению от 1 до 5" HorizontalOptions="Center"/>
-
-
+            
             <Picker x:Name="picker" Margin="100,0,100,0" >
                 <Picker.Items>
                     <x:String>1</x:String>
@@ -30,7 +28,7 @@
             <Button Text="Отправить" Clicked="Button_Clicked" Margin="150,0,5,5" />
         </StackLayout>
 
-        <StackLayout x:Name="data" Grid.Column="0" Grid.Row="1" Margin="20" >
+        <StackLayout Grid.Column="0" Grid.Row="1" Margin="20" >
             <StackLayout>
                 <ListView x:Name="reviewList"
                           HasUnevenRows="True"
